--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/8b87194466.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../styles/portfolio.css">
+    <link rel="stylesheet" href="./styles/portfolio.css">
 </head>
 <body>
     <section class="header">
