--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <!-- My failures of previous year -->
         <section class="failures">
-            <div><img src="../images/person.png" alt=""></div>
+            <div><img src="./images/person.png" alt=""></div>
 
             <div class="fl-content">
                 <h3 class="content-title">My failures of previous year</h3>
@@ -60,28 +60,28 @@
             </h3>
             <div class="plan-container">
                 <div class="plan-item">
-                    <img src="../images/icons/web.png" alt="">
+                    <img src="./images/icons/web.png" alt="">
                     <h3 class="plan-title">Web Development</h3>
                     <p class="plan-description">
                         I want to start
                     </p>
                 </div>
                 <div class="plan-item">
-                    <img src="../images/icons/js.png" alt="">
+                    <img src="./images/icons/js.png" alt="">
                     <h3 class="plan-title">Javascript</h3>
                     <p class="plan-description">
                         I want to learn
                     </p>
                 </div>
                 <div class="plan-item">
-                    <img src="../images/icons/smoke.png" alt="">
+                    <img src="./images/icons/smoke.png" alt="">
                     <h3 class="plan-title">Smoking Habit</h3>
                     <p class="plan-description">
                         I want to end
                     </p>
                 </div>
                 <div class="plan-item">
-                    <img src="../images/icons/ecom.png" alt="">
+                    <img src="./images/icons/ecom.png" alt="">
                     <h3 class="plan-title">ecommerce</h3>
                     <p class="plan-description">
                         I want to develop
@@ -112,13 +112,13 @@
                     <p>Phone : 01500 00 00 00</p>
                     <div class="social-item">
                         <a href="#">
-                            <img src="../images/icons/fb.png" alt="">
+                            <img src="./images/icons/fb.png" alt="">
                         </a>
                         <a href="#">
-                            <img src="../images/icons/twitter.png" alt="">
+                            <img src="./images/icons/twitter.png" alt="">
                         </a>
                         <a href="#">
-                            <img src="../images/icons/youtube.png" alt="">
+                            <img src="./images/icons/youtube.png" alt="">
                         </a>
                     </div>
                 </div>
